improve EntityService with createOptimizedEqualPredicate